# task-reminder

./: .env.example  .gitignore  Makefile  Makefile.example  README.md  eslint.config.js  index.html  latest.json  package.json  vite.config.js
backend/: main.py  pyproject.toml
portal/task-reminder/: LANDING_PAGE_REQUIREMENTS.md  next.config.ts  package-lock.json  package.json
portal/task-reminder/public/: latest.json
portal/task-reminder/src/app/: globals.css  layout.tsx  page.tsx
portal/task-reminder/src/app/api/notion/callback/: route.ts
portal/task-reminder/src/app/api/notion/introspect/: route.ts
portal/task-reminder/src/app/api/notion/revoke/: route.ts
portal/task-reminder/src/app/api/notion/status/: route.ts
portal/task-reminder/src/app/help/: page.tsx
portal/task-reminder/src/components/: CardSwap.tsx  DownloadSection.tsx  FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  Navigation.tsx  NotionIntegrationSection.tsx  PhilosophySection.tsx  ProblemsSection.tsx
script/: build.js
src/: App.jsx  index.css  main.jsx  notion-page.jsx  notion.jsx  settings.css  settings.jsx  task.jsx  tasklist copy.jsx  tasklist.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  notion.rs  setting.rs  task_manager.rs  window_manager.rs
src/components/: button.jsx  input.jsx  menu-view.jsx  notion-calender.jsx  notion-dashboard.jsx  notion-page.jsx  notion-tag.jsx  notion-taskdetail.jsx  notion.jsx  pages.jsx  select.jsx  slider.jsx  tab-switcher.jsx  task.jsx  textarea-command.jsx
src/components/ui/: loading.jsx  progress-circle.jsx
src/context/: NotionContext.js  NotionProvider.jsx  TagContext.js  TagProvider.jsx
