[package]
name = "task-reminder"
version = "1.0.0"
description = "高效习惯养成计划，专注每日最重要的事。"
authors = ["Yolanda"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-autostart = "2.5.0"
once_cell = "1.21.3"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
dotenv = "0.15.0"
tokio = "1.46.1"
chrono = "0.4.41"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
